# dc-hw

./: .dockerignore  .env  .gitattributes  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.gateway  Makefile  README.md  docker-compose.yml
amqp-consumer/: Cargo.toml
amqp-consumer/src/: lib.rs
api/proto/: auth.pb.go  auth.pb.gw.go  auth.proto  confirmation.pb.go  confirmation.proto  go.mod  shop.pb.go  shop.pb.gw.go  shop.proto
auth/: .env  Cargo.toml  diesel.toml
auth-client/: Cargo.toml
auth-client/src/: client.rs  lib.rs
auth/migrations/2020-05-09-212459_create_users/: down.sql  up.sql
auth/migrations/2020-05-28-005626_add_admin_user/: up.sql
auth/src/: config.rs  confirms.rs  main.rs  models.rs  proto_convert.rs  repo.rs  schema.rs  server.rs  service.rs
confirmations-email/: Cargo.toml
confirmations-email/src/: config.rs  main.rs
confirmations-sms/: .env  Cargo.toml
confirmations-sms/src/: config.rs  main.rs
docs/: swagger.yaml
errors/: Cargo.toml
errors/src/: errors.rs  lib.rs
gateway/: go.mod  go.sum  main.go
gateway/config/: config.go
migrations/2020-03-04-233435_create_products/: up.sql
pb/: Cargo.toml  build.rs
pb/src/: lib.rs
products-import/: .env  Cargo.toml
products-import/src/: config.rs  main.rs
shop/: .env  Cargo.toml  LICENSE  README.md
shop/src/: config.rs  importer.rs  main.rs  models.rs  proto_convert.rs  repo.rs  server.rs  service.rs
src/: main.rs  models.rs  schema.rs  store.rs
