[package]
name = "online-store-skeleton"
version = "0.1.0"
authors = ["BigRedEye <mail@sskvor.dev>"]
edition = "2018"

[dependencies]
actix-rt = "1"
actix-web = "2"

bytes = "0.5"
diesel = { version = "1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
