[package]
name = "auth"
version = "0.1.0"
authors = ["BigRedEye <mail@bigredeye.me>"]
edition = "2018"

[dependencies]
errors = { path = "../errors" }
auth-client = { path = "../auth-client" }
pb = { path = "../pb" }

log = "0.4.8"

config = "0.9"
dotenv = "0.15"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bcrypt = "0.8"
rand = "0.7"

r2d2 = "0.8"
diesel = { version = "1", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
diesel_migrations = "1.4.0"

tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

lapin = "1.0"
tokio-amqp = "0.1"
async-trait = "0.1.31"

[build-dependencies]
tonic-build = "0.2"
