[package]
name = "confirmations-email"
version = "0.1.0"
authors = ["BigRedEye <mail@bigredeye.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
amqp-consumer = { path = "../amqp-consumer" }
pb = { path = "../pb" }
prost = "0.6"

lapin = "1.0"
lettre = "0.9"
lettre_email = "0.9"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "time"] }

config = "0.9"
dotenv = "0.15"
env_logger = "0.7"
log = "0.4.8"
