[package]
name = "errors"
version = "0.1.0"
authors = ["BigRedEye <mail@bigredeye.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tonic = { version = "0.2", features = ["transport"]}
bcrypt = "0.8"
r2d2 = "0.8"
diesel = { version = "1", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
lapin = "1.0"
prost = "0.6"
