[package]
name = "products-import"
version = "0.1.0"
authors = ["BigRedEye <mail@bigredeye.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pb = { path = "../pb" }
auth-client = { path = "../auth-client" }

actix-rt = "1"
actix-web = "2"
actix-multipart = "0.2"
futures = "0.3.5"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.6"

config = "0.9"
dotenv = "0.15"
env_logger = "0.7"
log = "0.4.8"
csv = "1.1"

lapin = "1.0"
tokio-amqp = "0.1"
