[package]
name = "shop"
version = "0.1.0"
authors = ["BigRedEye <mail@sskvor.dev>"]
edition = "2018"

[dependencies]
errors = { path = "../errors" }
auth-client = { path = "../auth-client" }
amqp-consumer = { path = "../amqp-consumer" }
pb = { path = "../pb" }

log = "0.4.8"

config = "0.9"
dotenv = "0.15"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

r2d2 = "0.8"
diesel = { version = "1", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
futures = "0.3.5"
futures-util = "0.3.5"

tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
lapin = "1.0"

[build-dependencies]
tonic-build = "0.2"
